feat(sottome): SottoMeアプリのリンクと説明を追加

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -101,10 +101,10 @@ import { Icon } from 'astro-icon/components';
         icon="mdi:instagram"
       />
       <Card
-        href="https://716.pages.dev/"
-        title="vTuber ch"
-        body="716 doremi ch"
-        icon="mdi:youtube"
+        href="https://sottome.digital"
+        title="SottoMe"
+        body="SottoMe is a CBT (Coaching Behavioral Therapy) self-care app"
+        icon="sottome"
       />
     </ul>
 
